--- a/courses/036 自动做市商_恒定总和_推导1.md
+++ b/courses/036 自动做市商_恒定总和_推导1.md
@@ -17,7 +17,7 @@
 -
 - $\frac{(totalSupply + shares) · (x + y)}{(x + y)} = \frac{totalSupply·(x + y) + totalSupply·(△x + △y)}{(x + y)}$
 -
-- $totalSupply + shares = totalSupply·\farc{(x + y)}{(x + y)} + totalSupply·\farc{(△x + △y)}{(x + y)}$
+- $totalSupply + shares = totalSupply·\frac{(x + y)}{(x + y)} + totalSupply·\frac{(△x + △y)}{(x + y)}$
 -
 - $totalSupply + shares = totalSupply + totalSupply · \frac{(△x + △y)}{(x + y)}$
 -
