--- a/courses/036 自动做市商_恒定总和_推导2.md
+++ b/courses/036 自动做市商_恒定总和_推导2.md
@@ -1,9 +1,9 @@
 
 ### 详细推导```function removeLiquidity(uint256 _shares)```的数学计算
 #### 基础数据介绍
-- $(△x + △y)$，代表用户放入的新代币数量 (单位：代币数量)
+- $(△x + △y)$，代表需要返还给用户的代币数量 (单位：代币数量)
 - $(x + y)$，代表合约中现存的代币数量 (单位：代币数量)
-- $shares$，代表需要为用户新增的"流动性份额" (单位：流动性份额)
+- $shares$，代表用户退还的"流动性份额" (单位：流动性份额)
 - $totalSupply$，总流动性份额 (单位：流动性份额)
 
 　
