--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -25,7 +25,7 @@
 
 　
 
-#### 使用"流动性对等"公式，推导出：△x和△y的值
+#### 使用"流动性对等"公式2，推导出：△x和△y的值
 - $\frac{L}{△L} = \frac{totalSupply}{shares}$
 - 
 - $△L = L·\frac{shares}{totalSupply}$
