--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -25,6 +25,19 @@
 
 　
 
+#### 使用"流动性对等"公式1，推导出：△x和△y的值
+
+
+- $△x = x·(\frac{shares}{totalSupply})$
+- 换成系数y
+- $△y = y·(\frac{shares}{totalSupply})$
+
+　
+
+------------------------------------------------------------------------------------
+
+　
+
 #### 使用"流动性对等"公式2，推导出：△x和△y的值
 - $\frac{L}{△L} = \frac{totalSupply}{shares}$
 - 
