--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -1,7 +1,7 @@
 
 ### 详细推导```function removeLiquidity(uint256 _shares)```的数学计算
 #### 基础数据介绍
-- $L = \sqrt{x ·y}$，代表"当前流动性池子的价值" (单位：流动性份额)
+- $L0 = \sqrt{x ·y}$，代表"当前流动性池子的价值" (单位：流动性份额)
 - $△L = \sqrt{△x·△y}$，代表"需要返还给用户的代币，它所指向的流动池的价值"    (单位：流动性份额)
 - $shares$，代表用户退还的"流动性份额" (单位：流动性份额)
 - $totalSupply$，代表总流动性份额 (单位：流动性份额)
@@ -39,9 +39,9 @@
 　
 
 #### 使用"流动性对等"公式2，推导出：△x和△y的值
-- $\frac{L}{△L} = \frac{totalSupply}{shares}$
+- $\frac{L0}{△L} = \frac{totalSupply}{shares}$
 - 
-- $△L = L·\frac{shares}{totalSupply}$
+- $△L = L0·\frac{shares}{totalSupply}$
 - 代入流动性价值等式
 - $\sqrt{△x·△y} = \sqrt{x·y}·(\frac{shares}{totalSupply})$
 - 
