--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -28,7 +28,7 @@
 
 #### 使用"流动性对等"公式1，推导出：△x和△y的值
 - $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply - shares)}$
-
+- $\frac{\sqrt{x·y}}{\sqrt{(△x-x) ·(△y-y)}} = \frac{totalSupply}{(totalSupply - shares)}$
 
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
