--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -2,7 +2,7 @@
 ### 详细推导```function removeLiquidity(uint256 _shares)```的数学计算
 #### 基础数据介绍
 - $L0 = \sqrt{x ·y}$，代表"当前流动池中代币的价值" (单位：流动性份额)
-- $L1 = \sqrt{(△x-x) ·(△y-y)}$，代表"返还代币后，流动池中代币的价值" (单位：流动性份额)
+- $L1 = \sqrt{(x-△x) ·(y-△y)}$，代表"返还代币后，流动池中代币的价值" (单位：流动性份额)
 - $△L = \sqrt{△x·△y}$，代表"需要返还给用户的代币，它所指向的流动池的价值"    (单位：流动性份额)
 - $shares$，代表用户退还的"流动性份额" (单位：流动性份额)
 - $totalSupply$，代表总流动性份额 (单位：流动性份额)
@@ -28,7 +28,10 @@
 
 #### 使用"流动性对等"公式1，推导出：△x和△y的值
 - $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply - shares)}$
-- $\frac{\sqrt{x·y}}{\sqrt{(△x-x) ·(△y-y)}} = \frac{totalSupply}{(totalSupply - shares)}$
+- $\frac{\sqrt{x·y}}{\sqrt{(x-△x) ·(y-△y)}} = \frac{totalSupply}{(totalSupply - shares)}$
+- $\sqrt{\frac{x·y}{(x-△x) ·(y-△y)}} = \frac{totalSupply}{(totalSupply - shares)}$
+- 使用$△y = △x · \frac{y}{x}$
+- $\sqrt{\frac{x·y}{(x-△x) ·(y-△x · \frac{y}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
 
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
