--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -32,6 +32,7 @@
 - $\sqrt{\frac{x·y}{(x-△x) ·(y-△y)}} = \frac{totalSupply}{(totalSupply - shares)}$
 - 使用 $△y = △x · \frac{y}{x}$
 - $\sqrt{\frac{x·y}{(x-△x) ·(y-△x · \frac{y}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
+- $\sqrt{\frac{x·y}{(x-△x) ·y·(1-△x · \frac{1}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
 
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
