--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -36,6 +36,7 @@
 - $\sqrt{\frac{x·y}{(x-△x) ·y·(\frac{x}{x}- \frac{△x}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
 - $\sqrt{\frac{x·y}{(x-△x) ·y·(\frac{x-△x}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
 - $\sqrt{\frac{x·y·x}{(x-△x) ·y·(\frac{x-△x}{x})·x}} = \frac{totalSupply}{(totalSupply - shares)}$
+- $\sqrt{\frac{x^2·y}{(x-△x) ·y·(x-△x)}} = \frac{totalSupply}{(totalSupply - shares)}$
 
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
