--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -40,6 +40,8 @@
 - $\sqrt{\frac{x^2·y}{(x-△x)^2 · y}} = \frac{totalSupply}{(totalSupply - shares)}$
 - $\sqrt{\frac{x^2}{(x-△x)^2}} = \frac{totalSupply}{(totalSupply - shares)}$
 - $\frac{x}{(x-△x)} = \frac{totalSupply}{(totalSupply - shares)}$
+- $x·(totalSupply - shares) = (x-△x)·totalSupply$
+
 
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
