--- a/courses/038 自动做市商_恒定乘积_推导2.md
+++ b/courses/038 自动做市商_恒定乘积_推导2.md
@@ -28,21 +28,39 @@
 
 #### 使用"流动性对等"公式1，推导出：△x和△y的值
 - $\frac{L0}{L1} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\frac{\sqrt{x·y}}{\sqrt{(x-△x) ·(y-△y)}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x·y}{(x-△x) ·(y-△y)}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - 使用 $△y = △x · \frac{y}{x}$
+-
 - $\sqrt{\frac{x·y}{(x-△x) ·(y-△x · \frac{y}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x·y}{(x-△x) ·y·(1-△x · \frac{1}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x·y}{(x-△x) ·y·(\frac{x}{x}- \frac{△x}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x·y}{(x-△x) ·y·(\frac{x-△x}{x})}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x·y·x}{(x-△x) ·y·(\frac{x-△x}{x})·x}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x^2·y}{(x-△x) ·y·(x-△x)}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x^2·y}{(x-△x)^2 · y}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\sqrt{\frac{x^2}{(x-△x)^2}} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $\frac{x}{(x-△x)} = \frac{totalSupply}{(totalSupply - shares)}$
+-
 - $x·(totalSupply - shares) = (x-△x)·totalSupply$
-
-
+-
+- $x·totalSupply - x·shares = x·totalSupply - △x·totalSupply$
+-
+- $- x·shares = - △x·totalSupply$
+-
+- $x·shares = △x·totalSupply$
+-
 - $△x = x·(\frac{shares}{totalSupply})$
 - 换成系数y
 - $△y = y·(\frac{shares}{totalSupply})$
