--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -1,7 +1,7 @@
 #### 概念
 - 质押：用户将一定数量的加密货币锁定在区块链网络中，以支持网络的安全性和运行。质押者通过提供自己的资产帮助验证交易和生成新块。
-- 奖励：用户在质押的过程中，通常会奖励给用户一定数量的加密货币，奖励的数量可能与质押的资产数量、质押的时间长度以及网络的具体机制有关。
-- 激励机制：激励用户持有和质押其资产，而不是在市场上交易。这种机制帮助维护网络的安全性和稳定性，同时提高了质押者的长期参与感。
+- 奖励：用户在质押的过程中，通常系统会奖励给用户一定数量的加密货币，奖励的数量可能与质押的资产数量、质押的时间长度以及网络的具体机制有关。
+- 激励机制：系统激励用户持有和质押其资产，而不是在市场上交易。这种机制帮助维护网络的安全性和稳定性，同时提高了质押者的长期参与感。
 - 风险与收益：质押虽然可以带来收益，但也伴随着风险，例如资产价格波动、质押锁定期（某些网络在质押期间无法赎回资产）以及网络的安全性等问题。
 - 动态性：普通的质押奖励是一种激励用户参与和支持区块链网络的机制，用户通过质押资产可以获得额外的收益。这种方式不仅促进了区块链的安全性和去中心化，还鼓励长期持有和参与。
 
