--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -13,7 +13,7 @@
 
 #### 数学过程推演：
 - 由于推演的数学符号包含坐标轴，故这里不再使用markdown的数学语法进行表述，而使用贴图。
-- 以下将讨论普通意义上的"质押奖励"，即"奖励率"是相对恒定的。
+- 以下将讨论普通意义上的"质押奖励"过程(即"奖励率"是相对恒定的)。
 
 　
 
