--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -20,5 +20,12 @@
 ##### 基本坐标轴图示
 - 横轴X，表示时间轴(颗粒度为秒)
 - 纵轴Y，表示质押代币数量
+- 第3秒，Alice质押了100个代币
+- 第5秒，Bob质押了200个代币
+- 第6秒，Carol质押了100个代币
+- 第9秒，Alice取走了100个代币
+- 第10秒，Carol质押了100个代币
+- 第11秒，Bob取走了200个代币
+- 第13秒，Carol取走了200个代币
 
 ![stakingReward_0.png.](../images/stakingReward_0.png "stakingReward_0.png.")
