--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -29,3 +29,13 @@
 - 第13秒，Carol取走了200个代币
 
 ![stakingReward_0.png.](../images/stakingReward_0.png "stakingReward_0.png.")
+
+　
+
+##### 如何表达Alice，在这整个过程中获取的奖励，
+- Alice从第3秒到第6秒，总共获取的奖励
+- 也就是，中间每一秒钟获取的奖励之和(3->4，4->5，5->6，6->7，7->8，8->9)。
+- 以下介绍几个关键变量：
+- $S_i$：在第i秒时，目标用户质押的总数量
+- $T_i$：在第i秒时，系统中所有用户质押的总数量
+- $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"，是恒定的。
