--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -32,8 +32,8 @@
 
 　
 
-##### 如何表达Alice，在这整个过程中获取的奖励，
-- Alice从第3秒到第6秒，总共获取的奖励
+##### 如何表达Alice，在这整个过程中获取的奖励
+- Alice从第3秒到第9秒，总共获取的奖励
 - 也就是，中间每一秒钟获取的奖励之和(3->4，4->5，5->6，6->7，7->8，8->9)。
 - 以下介绍几个关键变量：
 - $S_i$：在第i秒时，目标用户质押的总数量
