--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -39,3 +39,4 @@
 - $S_i$：在第i秒时，目标用户质押的总数量
 - $T_i$：在第i秒时，系统中所有用户质押的总数量
 - $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"，是恒定的。
+- Alice在第3->4秒中，获取的奖励值 = $\frac{S_3}{T_3}·R$
