--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -41,4 +41,4 @@
 - $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"，是恒定的。
 - Alice在第3->4秒中，获取的奖励值 = $\frac{S_3}{T_3}·R$
 - 所以，Alice总共获取的奖励为 $r(A,3,8) = \frac{S_3}{T_3}·R + \frac{S_4}{T_4}·R + \frac{S_5}{T_5}·R + \frac{S_6}{T_6}·R + \frac{S_7}{T_7}·R + \frac{S_8}{T_8}·R$
-- 总结：$r(user,k,n) = \frac{S_k}{T_k}·R + ... + \frac{S_n-1}{T_n-1}·R$
+- 总结 $r(user,k,n) = \frac{S_k}{T_k}·R + ... $
