--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -40,5 +40,13 @@
 - $T_i$：在第i秒时，系统中所有用户质押的总数量
 - $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"，是恒定的。
 - Alice在第3->4秒中，获取的奖励值 = $\frac{S_3}{T_3}·R$
-- 所以，Alice总共获取的奖励为 $r(A,3,8) = \frac{S_3}{T_3}·R + \frac{S_4}{T_4}·R + \frac{S_5}{T_5}·R + \frac{S_6}{T_6}·R + \frac{S_7}{T_7}·R + \frac{S_8}{T_8}·R$
+- 所以，Alice总共获取的奖励为 $r(A,3,9) = \frac{S_3}{T_3}·R + \frac{S_4}{T_4}·R + \frac{S_5}{T_5}·R + \frac{S_6}{T_6}·R + \frac{S_7}{T_7}·R + \frac{S_8}{T_8}·R$
 - 总结 $r(user,k,n) = \frac{S_k}{T_k}·R + \frac{S_(k+1)}{T_(k+1))}·R + ... \frac{S_(n-1)}{T_(n-1)}·R = \sum_{i=k}^{(n-1)} \frac{S_i}{T_i}·R$
+
+　
+
+- 以上公式，只是初步计算，很明显推导到这里，并未结束
+- 我们发现，在Alice的时间轴上， 第5秒，第6秒，第9秒，这三个临界点上，系统的总质押量都有变化。所以，需要继续细化公式。
+- 在公式层面，越恒定的值，越容易被提炼出。
+- 找出Alice时间轴上，恒定的部分，加以拆分：[第3秒 -> 第5秒]，[第5秒 -> 第6秒]，[第6秒 -> 第9秒]
+- $r(A,3,8) = \sum_{i=3}^{(5-1)} \frac{S_3}{T_i}·R$
