--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -45,6 +45,7 @@
 
 　
 
+![stakingReward_0.png.](../images/stakingReward_0.png "stakingReward_0.png.")
 - 以上公式，只是初步计算，很明显推导到这里，并未结束
 - 我们发现，在Alice的时间轴上， 第5秒，第6秒，第9秒，这三个临界点上，系统的总质押量都有变化。所以，需要继续细化公式。
 - 在公式层面，越恒定的值，越容易被提炼出。
