--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -50,4 +50,4 @@
 - 我们发现，在Alice的时间轴上， 第5秒，第6秒，第9秒，这三个临界点上，系统的总质押量都有变化。所以，需要继续细化公式。
 - 在公式层面，越恒定的值，越容易被提炼出。
 - 找出Alice时间轴上，恒定的部分，加以拆分：[第3秒 -> 第5秒]，[第5秒 -> 第6秒]，[第6秒 -> 第9秒]
-- $r(A,3,9) = \sum_{i=3}^{(5-1)} \frac{S_3}{T_i}·R + \sum_{i=5}^{(6-1)} \frac{S_5}{T_i}·R + \sum_{i=6}^{(9-1)} \frac{S_6}{T_i}·R$
+- 也就是 $\sum_{i=3}^{(5-1)} \frac{S_3}{T_i}·R + \sum_{i=5}^{(6-1)} \frac{S_5}{T_i}·R + \sum_{i=6}^{(9-1)} \frac{S_6}{T_i}·R$
