--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -52,4 +52,4 @@
 - 找出Alice时间轴上，恒定的部分，加以拆分：[第3秒 -> 第5秒]，[第5秒 -> 第6秒]，[第6秒 -> 第9秒]
 - 也就是 $\sum_{i=3}^{(5-1)} \frac{S_3}{T_i}·R ， \sum_{i=5}^{(6-1)} \frac{S_5}{T_i}·R ， \sum_{i=6}^{(9-1)} \frac{S_6}{T_i}·R$
 - 我们把以上3段中的任何1段，每1段过程中Alice的质押量保持恒定，想象成一个新的通用的过程。
-- 如，[第3秒 -> 第5秒]的奖励值：$r(A,3,5) = r(A,k,n) = \sum_{i=k}^{(n-1) \frac{S_i}{T_i}·R} = S·\sum_{i=k}^{(n-1) \frac{R}{T_i}$
+- 如，[第3秒 -> 第5秒]的奖励值 $r(A,3,5) = r(A,k,n) = \sum_{i=k}^{(n-1) \frac{S_i}{T_i}·R} = S·\sum_{i=k}^{(n-1) \frac{R}{T_i}$
