--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -57,4 +57,4 @@
 - 如，[第3秒 -> 第5秒]的奖励值 $r(A,3,5) = r(A,k,n) = \sum_{i=k}^{(n-1)} \frac{S_i}{T_i}·R = S·\sum_{i=k}^{(n-1)} \frac{R}{T_i} = S·(\sum_{i=0}^{(n-1)} \frac{R}{T_i} - \sum_{i=0}^{(k-1)} \frac{R}{T_i})$
 - 如，[第5秒 -> 第6秒]的奖励值，同理
 - 如，[第6秒 -> 第9秒]的奖励值，同理
-- 总结 $r(A,k,n) = S·(\sum_{i=0}^{(n-1)} \frac{R}{T_i} - \sum_{i=0}^{(k-1)} \frac{R}{T_i}) 简写= S·(r_n - r_k)$，k到n的过程，代表目标用户质押的总数量保持恒定。
+- 总结 $r(A,k,n) = S·(\sum_{i=0}^{(n-1)} \frac{R}{T_i} - \sum_{i=0}^{(k-1)} \frac{R}{T_i}) => 简写 => S·(r_n - r_k)$，k到n的过程，代表目标用户质押的总数量保持恒定。
