--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -61,3 +61,7 @@
 - [第3秒 -> 第5秒]的奖励值 $S·(r_5 - r_3)$
 - [第5秒 -> 第6秒]的奖励值 $S·(r_6 - r_5)$
 - [第6秒 -> 第9秒]的奖励值 $S·(r_9 - r_6)$
+
+　
+
+- 接下来，我们对"$累积求和r_n$，进行拆分"。
