--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -66,3 +66,5 @@
 
 - 接下来，我们对 $"累计求和r_n"$，进行拆分。
 - 为了不与上面推导公式中的n重合，我们定义为 $"累计求和r_j"$
+- 此时，用户的质押量 $S_i$ 已经被抽离出去了。
+- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i}$
