--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -54,6 +54,7 @@
 - 我们把以上3段中的任何1段，每1段过程中Alice的质押量保持恒定，想象成一个新的通用的过程。
 
 ![stakingReward_1.png.](../images/stakingReward_1.png "stakingReward_1.png.")
+
 - 如，[第3秒 -> 第5秒]的奖励值 $r(A,3,5) = r(A,k,n) = \sum_{i=k}^{(n-1)} \frac{S_i}{T_i}·R = S·\sum_{i=k}^{(n-1)} \frac{R}{T_i} = S·(\sum_{i=0}^{(n-1)} \frac{R}{T_i} - \sum_{i=0}^{(k-1)} \frac{R}{T_i})$
 - 如，[第5秒 -> 第6秒]的奖励值，同理
 - 如，[第6秒 -> 第9秒]的奖励值，同理
@@ -66,5 +67,10 @@
 
 - 接下来，我们对 $"累计求和r_n"$，进行拆分。
 - 为了不与上面推导公式中的n重合，我们定义为 $"累计求和r_j"$
-- 此时，用户的质押量 $S_i$ 已经被抽离出去了。
+- 此时，用户的质押量 $S_i$ 已经被抽离出去了，不恒定的变量只剩下为 $T_i$。
 - $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i}$
+- 我们需要设想 $T_i$为恒定值，故在第 $j_0$ 秒，到第$j$秒 之间，$T_i = T$恒定不变。
+
+![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
+
+- 
