--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -72,4 +72,4 @@
 - 我们需要设想 $T_i$为恒定值，故在第 $j_0$ 秒，到第$j$秒 之间，$T_i = T$恒定不变。
 
 ![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
-- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1$
+- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_(j_0)$
