--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -69,7 +69,7 @@
 - 为了不与上面推导公式中的n重合，我们定义为 $"累计求和r_j"$
 - 此时，用户的质押量 $S_i$ 已经被抽离出去了，不恒定的变量只剩下为 $T_i$。
 - $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i}$
-- 我们需要设想 $T_i$为恒定值，故在第 $j_0$ 秒，到第$j$秒 之间，$T_i = T$恒定不变。
+- 我们需要设想 $T_i$为恒定值，故在第 $j0$ 秒，到第 $j$ 秒 之间， $T_i = T$恒定不变。
 
 ![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
-- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_j0)$
+- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_j0 + \sum_{i=j0}^{j-1}·\frac{R}{T}$
