--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -73,3 +73,4 @@
 
 ![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
 - $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_j0 + \sum_{i=j0}^{j-1}·\frac{R}{T}$
+- $r_j = r_j0 + \frac{R}{T}·\sum_{i=j0}^{j-1}·1$
