--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -69,11 +69,11 @@
 - 为了不与上面推导公式中的n重合，我们定义为 $"累计求和r_j"$
 - 此时，用户的质押量 $S_i$ 已经被抽离出去了，不恒定的变量只剩下为 $T_i$。
 - $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i}$
-- 我们需要设想 $T_i$为恒定值，故在第 $j0$ 秒，到第 $j$ 秒 之间， $T_i = T$恒定不变。
+- 我们需要设想 $T_i$为恒定值，故在第 $x$ 秒，到第 $j$ 秒 之间， $T_i = T$恒定不变。
 
 ![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
-- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_j0 + \sum_{i=j0}^{j-1}·\frac{R}{T}$
-- $r_j = r_j0 + \frac{R}{T}·\sum_{i=j0}^{j-1}·1$
+- $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_x + \sum_{i=x}^{j-1}·\frac{R}{T}$
+- $r_j = r_x + \frac{R}{T}·\sum_{i=x}^{j-1}·1$
 - 终于到了"纯数值累加求和"
-- $r_j = r_j0 + \frac{R}{T}·(j-1-j0+1)$
-- $r_j = r_j0 + \frac{R}{T}·(j-j0)$
+- $r_j = r_x + \frac{R}{T}·(j-1-x+1)$
+- $r_j = r_x + \frac{R}{T}·(j-x)$
