--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -77,3 +77,11 @@
 - 终于到了"纯数值累加求和"
 - $r_j = r_x + \frac{R}{T}·(j-1-x+1)$
 - $r_j = r_x + \frac{R}{T}·(j-x)$
+
+　
+
+- 依据上面的公式，以此类推：
+- $r3 = 0$
+- $r5 = r3 + \frac{R}{T}·(5-3)$
+- $r6 = r5 + \frac{R}{T}·(6-5)$
+- $r9 = r6 + \frac{R}{T}·(9-6)$
