--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -93,6 +93,10 @@
 
 - 至此，质押奖励的计算逻辑，已经完全确定。
 - 一个用户的最终质押奖励值，一定是一个累加的过程，每次有"临界点(压入代币，取出代币，提取奖励)"的变动时，都需要有逻辑计算与存储。
+- 牢记，每当时间轴到达"临界点"，则使用公式 $r_j = r_x + \frac{R}{T}·(j-x)$
+
+　
+
 - 以下是一份示例代码：
 ```
 // SPDX-License-Identifier: MIT
