--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -155,7 +155,6 @@ contract StakingRewards {
     }
 
     function lastTimeRewardApplicable() public view returns (uint256) {
-        
         return _min(finishAt, block.timestamp);
     }
 
@@ -164,10 +163,11 @@ contract StakingRewards {
             return rewardPerTokenStored;
         }
 
-        return rewardPerTokenStored
-            + (rewardRate * (lastTimeRewardApplicable() - updatedAt) * 1e18)
-                / totalSupply;
-       //这里乘以1e18，则表达为“每质押1个Ether单位代币，累积多少wei单位个奖励代币”
+        return
+            rewardPerTokenStored +
+            (rewardRate * (lastTimeRewardApplicable() - updatedAt) * 1e18) /
+            totalSupply;
+        //这里乘以1e18，则表达为“每质押1个Ether单位代币，累积多少wei单位个奖励代币”
     }
 
     function stake(uint256 _amount) external updateReward(msg.sender) {
@@ -185,12 +185,10 @@ contract StakingRewards {
     }
 
     function earned(address _account) public view returns (uint256) {
-        return (
-            (
-                balanceOf[_account]
-                    * (rewardPerToken() - userRewardPerTokenPaid[_account])
-            ) / 1e18
-        ) + rewards[_account];
+        return
+            ((balanceOf[_account] *
+                (rewardPerToken() - userRewardPerTokenPaid[_account])) / 1e18) +
+            rewards[_account];
     }
 
     function getReward() external updateReward(msg.sender) {
@@ -214,7 +212,8 @@ contract StakingRewards {
         if (block.timestamp >= finishAt) {
             rewardRate = _amount / duration;
         } else {
-            uint256 remainingRewards = (finishAt - block.timestamp) * rewardRate;
+            uint256 remainingRewards = (finishAt - block.timestamp) *
+                rewardRate;
             rewardRate = (_amount + remainingRewards) / duration;
         }
 
@@ -228,6 +227,19 @@ contract StakingRewards {
         updatedAt = block.timestamp;
     }
 
+    function setRewardsAndNotify(uint256 _amount, uint256 _duration)
+        external
+        onlyOwner
+    {
+        // 1. 管理员转入奖励代币到合约地址
+        rewardsToken.transferFrom(msg.sender, address(this), _amount);
+
+        // 2. 调用 notifyRewardAmount 函数
+        this.notifyRewardAmount(_amount);
+        // 3. 设置奖励持续时间
+        this.setRewardsDuration(_duration);
+    }
+
     function _min(uint256 x, uint256 y) private pure returns (uint256) {
         return x <= y ? x : y;
     }
@@ -235,20 +247,26 @@ contract StakingRewards {
 
 interface IERC20 {
     function totalSupply() external view returns (uint256);
+
     function balanceOf(address account) external view returns (uint256);
+
     function transfer(address recipient, uint256 amount)
         external
         returns (bool);
+
     function allowance(address owner, address spender)
         external
         view
         returns (uint256);
-    function approve(address spender, uint256 amount) external returns (bool);
-    function transferFrom(address sender, address recipient, uint256 amount)
-        external
-        returns (bool);
-}
 
+    function approve(address spender, uint256 amount) external returns (bool);
+
+    function transferFrom(
+        address sender,
+        address recipient,
+        uint256 amount
+    ) external returns (bool);
+}
 ```
 - 以下补充一些代码注解贴图：
 ![](../images/stakingReward_Code_1.png "")
