--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -38,7 +38,7 @@
 - 以下介绍几个关键变量：
 - $S_i$：在第i秒时，目标用户质押的总数量
 - $T_i$：在第i秒时，系统中所有用户质押的总数量
-- $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"，是恒定的。
+- $R_i$：系统每一秒钟产出的奖励数量，即，"奖励率"=($\frac{管理员分配的奖励代币数量}{质押活动的总时长(秒)}$)，是恒定的。
 - Alice在第3->4秒中，获取的奖励值 = $\frac{S_3}{T_3}·R$
 - 所以，Alice总共获取的奖励为 $r(A,3,9) = \frac{S_3}{T_3}·R + \frac{S_4}{T_4}·R + \frac{S_5}{T_5}·R + \frac{S_6}{T_6}·R + \frac{S_7}{T_7}·R + \frac{S_8}{T_8}·R$
 - 总结 $r(user,k,n) = \frac{S_k}{T_k}·R + \frac{S_(k+1)}{T_(k+1))}·R + ... \frac{S_(n-1)}{T_(n-1)}·R = \sum_{i=k}^{(n-1)} \frac{S_i}{T_i}·R$
@@ -236,7 +236,7 @@ contract StakingRewards {
 
         // 2. 调用 notifyRewardAmount 函数
         this.notifyRewardAmount(_amount);
-        
+
         // 3. 设置奖励持续时间
         this.setRewardsDuration(_duration);
     }
