--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -102,131 +102,143 @@
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.24;
 
-//质押活动
+// 质押活动合约
 //__________________ a轮开始, duration，a轮finishAt __________________ b轮开始, duration，b轮finishAt __________________ c轮开始, duration，c轮finishAt
 
 contract StakingRewards {
-    IERC20 public immutable stakingToken;
-    IERC20 public immutable rewardsToken;
+    IERC20 public immutable stakingToken; // 质押代币
+    IERC20 public immutable rewardsToken; // 奖励代币
 
-    address public owner;
+    address public owner; // 合约所有者
 
-    // Duration of rewards to be paid out (in seconds)
-    uint256 public duration;
-    // Timestamp of when the rewards finish
-    uint256 public finishAt;
-    // Minimum of last updated time and reward finish time
-    uint256 public updatedAt;
-    // Reward to be paid out per second
-    uint256 public rewardRate;
-    // Sum of (reward rate * dt * 1e18 / total supply)
-    uint256 public rewardPerTokenStored;
-    // User address => rewardPerTokenStored
-    mapping(address => uint256) public userRewardPerTokenPaid;
-    // User address => rewards to be claimed
-    mapping(address => uint256) public rewards;
+    // 奖励支付的持续时间（以秒为单位）
+    uint256 public duration; 
+    // 奖励结束的时间戳
+    uint256 public finishAt; 
+    // 最后更新时间与奖励结束时间的最小值
+    uint256 public updatedAt; 
+    // 每秒支付的奖励数量
+    uint256 public rewardRate; 
+    // (reward rate * dt * 1e18 / total supply) 的总和
+    uint256 public rewardPerTokenStored; 
+    // 用户地址 => 奖励每个代币存储的值
+    mapping(address => uint256) public userRewardPerTokenPaid; 
+    // 用户地址 => 可领取的奖励
+    mapping(address => uint256) public rewards; 
 
-    // Total staked
-    uint256 public totalSupply;
-    // User address => staked amount
-    mapping(address => uint256) public balanceOf;
+    // 总质押量
+    uint256 public totalSupply; 
+    // 用户地址 => 质押的数量
+    mapping(address => uint256) public balanceOf; 
 
+    // 构造函数，初始化质押代币和奖励代币的地址
     constructor(address _stakingToken, address _rewardToken) {
-        owner = msg.sender;
-        stakingToken = IERC20(_stakingToken);
-        rewardsToken = IERC20(_rewardToken);
+        owner = msg.sender; // 合约部署者为所有者
+        stakingToken = IERC20(_stakingToken); // 设置质押代币
+        rewardsToken = IERC20(_rewardToken); // 设置奖励代币
     }
 
+    // 仅限所有者的修饰器
     modifier onlyOwner() {
         require(msg.sender == owner, "not authorized");
         _;
     }
 
+    // 更新奖励的修饰器
     modifier updateReward(address _account) {
-        rewardPerTokenStored = rewardPerToken();
-        updatedAt = lastTimeRewardApplicable();
+        rewardPerTokenStored = rewardPerToken(); // 更新每个代币的奖励
+        updatedAt = lastTimeRewardApplicable(); // 更新最后奖励时间
 
         if (_account != address(0)) {
-            rewards[_account] = earned(_account);
-            userRewardPerTokenPaid[_account] = rewardPerTokenStored;
+            rewards[_account] = earned(_account); // 计算用户的奖励
+            userRewardPerTokenPaid[_account] = rewardPerTokenStored; // 更新用户的已支付奖励
         }
 
         _;
     }
 
+    // 返回适用的最后奖励时间
     function lastTimeRewardApplicable() public view returns (uint256) {
-        return _min(finishAt, block.timestamp);
+        return _min(finishAt, block.timestamp); // 返回当前时间与奖励结束时间的最小值
     }
 
+    // 计算每个代币的奖励
     function rewardPerToken() public view returns (uint256) {
         if (totalSupply == 0) {
-            return rewardPerTokenStored;
+            return rewardPerTokenStored; // 如果没有质押，返回已存储的奖励
         }
 
         return
             rewardPerTokenStored +
             (rewardRate * (lastTimeRewardApplicable() - updatedAt) * 1e18) /
             totalSupply;
-        //这里乘以1e18，则表达为“每质押1个Ether单位代币，累积多少wei单位个奖励代币”
+        // 这里乘以1e18，则表达为“每质押1个Ether单位代币，累积多少wei单位的奖励代币”
     }
 
+    // 用户质押代币
     function stake(uint256 _amount) external updateReward(msg.sender) {
-        require(_amount > 0, "amount = 0");
-        stakingToken.transferFrom(msg.sender, address(this), _amount);
-        balanceOf[msg.sender] += _amount;
-        totalSupply += _amount;
+        require(_amount > 0, "amount = 0"); // 确保质押数量大于0
+        stakingToken.transferFrom(msg.sender, address(this), _amount); // 转移质押代币到合约
+        balanceOf[msg.sender] += _amount; // 更新用户质押余额
+        totalSupply += _amount; // 更新总质押量
     }
 
+    // 用户撤回质押的代币
     function withdraw(uint256 _amount) external updateReward(msg.sender) {
-        require(_amount > 0, "amount = 0");
-        balanceOf[msg.sender] -= _amount;
-        totalSupply -= _amount;
-        stakingToken.transfer(msg.sender, _amount);
+        require(_amount > 0, "amount = 0"); // 确保撤回数量大于0
+        balanceOf[msg.sender] -= _amount; // 更新用户质押余额
+        totalSupply -= _amount; // 更新总质押量
+        stakingToken.transfer(msg.sender, _amount); // 转回质押代币给用户
     }
 
+    // 计算用户已获得的奖励
     function earned(address _account) public view returns (uint256) {
         return
             ((balanceOf[_account] *
                 (rewardPerToken() - userRewardPerTokenPaid[_account])) / 1e18) +
-            rewards[_account];
+            rewards[_account]; // 计算用户已获得的奖励
     }
 
+    // 用户领取奖励
     function getReward() external updateReward(msg.sender) {
-        uint256 reward = rewards[msg.sender];
+        uint256 reward = rewards[msg.sender]; // 获取用户的奖励
         if (reward > 0) {
-            rewards[msg.sender] = 0;
-            rewardsToken.transfer(msg.sender, reward);
+            rewards[msg.sender] = 0; // 清空用户的奖励
+            rewardsToken.transfer(msg.sender, reward); // 转移奖励代币给用户
         }
     }
 
+    // 设置奖励持续时间
     function setRewardsDuration(uint256 _duration) external onlyOwner {
-        require(finishAt < block.timestamp, "reward duration not finished");
-        duration = _duration;
+        require(finishAt < block.timestamp, "reward duration not finished"); // 确保奖励时间已结束
+        duration = _duration; // 更新奖励持续时间
     }
 
+    // 通知奖励数量
     function notifyRewardAmount(uint256 _amount)
         external
         onlyOwner
         updateReward(address(0))
     {
         if (block.timestamp >= finishAt) {
-            rewardRate = _amount / duration;
+            rewardRate = _amount / duration; // 奖励率
         } else {
             uint256 remainingRewards = (finishAt - block.timestamp) *
-                rewardRate;
-            rewardRate = (_amount + remainingRewards) / duration;
+                rewardRate; // 剩余奖励
+            rewardRate = (_amount + remainingRewards) / duration; // 更新奖励率
         }
 
-        require(rewardRate > 0, "reward rate = 0");
+        require(rewardRate > 0, "reward rate = 0"); // 确保奖励率大于0
         require(
             rewardRate * duration <= rewardsToken.balanceOf(address(this)),
-            "reward amount > balance"
+            "reward amount > balance" // 确保合约内有足够的奖励代币
         );
 
-        finishAt = block.timestamp + duration;
-        updatedAt = block.timestamp;
+        finishAt = block.timestamp + duration; // 设置奖励结束时间
+        updatedAt = block.timestamp; // 更新最后时间
     }
 
+    // 设置奖励和通知
     function setRewardsAndNotify(uint256 _amount, uint256 _duration)
         external
         onlyOwner
@@ -241,11 +253,13 @@ contract StakingRewards {
         this.setRewardsDuration(_duration);
     }
 
+    // 返回两个数中的最小值
     function _min(uint256 x, uint256 y) private pure returns (uint256) {
         return x <= y ? x : y;
     }
 }
 
+// ERC20接口定义
 interface IERC20 {
     function totalSupply() external view returns (uint256);
 
@@ -268,6 +282,7 @@ interface IERC20 {
         uint256 amount
     ) external returns (bool);
 }
+
 ```
 - 以下补充一些代码注解贴图：
 ![](../images/stakingReward_Code_1.png "")
