--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -180,7 +180,7 @@ contract StakingRewards {
             -> 两个时间戳差值：1698441600 - 1698441590 = 10
             -> 0 + (2000000000000000000 * (1698441600 - 1698441590)) * 1e18 / 10000000000000000000 
 
-            从以上来看，一旦"总质押 totalSupply" 略大，超过"rewardRate 与 时间值的乘积"，如果执行(* 1e18)，就会出现"小数点"，进而丢失精度！
+            从以上来看，一旦"总质押 totalSupply" 略大，超过"rewardRate 与 时间值的乘积"，如果不执行(* 1e18)，就会出现"小数点"，进而丢失精度！
         */
 
         return
