--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -74,7 +74,7 @@
 ![stakingReward_2.png.](../images/stakingReward_2.png "stakingReward_2.png.")
 - $r_j = \sum_{i=0}^{(j-1)} \frac{R}{T_i} = \frac{R}{T}·\sum_{i=0}^{(j-1)}·1 = r_x + \sum_{i=x}^{j-1}·\frac{R}{T}$
 - $r_j = r_x + \frac{R}{T}·\sum_{i=x}^{j-1}·1$
-- 终于到了"纯数值累加求和"
+- 终于到了"纯数值累加求和"，此时已经完全没有代入"用户的数据"了！
 - $r_j = r_x + \frac{R}{T}·(j-1-x+1)$
 - $r_j = r_x + \frac{R}{T}·(j-x)$
 
