--- a/courses/039 质押奖励.md
+++ b/courses/039 质押奖励.md
@@ -207,11 +207,15 @@ contract StakingRewards {
 
     // 计算用户已获得的奖励
     function earned(address _account) public view returns (uint256) {
+        /*
+            -> r(A,j,k) = S·(r_k - r_j)
+            -> 此处，计算的是用户累计的总奖励值，故，末尾 + rewards[_account]
+            注意，此处需要"还原精度，除以 1e18"   
+        */
         return
             ((balanceOf[_account] *
                 (rewardPerToken() - userRewardPerTokenPaid[_account])) / 1e18) +
-            rewards[_account]; // 计算用户已获得的奖励
-        // 注意，此处需要"还原精度，除以 1e18"            
+            rewards[_account]; // 计算用户已获得的奖励                 
     }
 
     // 用户领取奖励
