--- a/courses/023 ERC4626标准.md
+++ b/courses/023 ERC4626标准.md
@@ -15,6 +15,7 @@
 - 存款（Deposit）：用户可以将资产存入金库，并获得相应的金库代币作为证明。
 - 取款（Withdraw）：用户可以根据其持有的金库代币提取相应的资产。
 - 资产与份额转换：提供了资产和份额之间的转换功能，让用户清楚了解其在金库中的权益。
+- 粗暴理解：用户投入资产放金库，金库兑换出一种新资产出来。用户可以拿新资产，进行自由转让或其他投资。
 
 #### 收益管理：
 - ERC4626 金库可以自动管理用户的资产，通过不同的DeFi策略生成收益，用户不需要手动干预。
