--- a/courses/023 ERC4626标准.md
+++ b/courses/023 ERC4626标准.md
@@ -36,8 +36,8 @@
 - 跨链资产管理：ERC4626 标准可以应用于跨链桥，允许用户在不同区块链之间高效管理和转移资产。
 
 #### 与质押奖励合约类比：
-- ERC4626合约，类似于"银行的随存随取理财"，多种投资策略（如流动性挖矿、借贷等），收益通常不固定，可能会受到市场波动的影响，风险也相对较高。
-- 质押奖励合约，类似于"银行的定期存款"，通常较为简单，风险相对较低，但收益也通常较为稳定和有限。
+- ERC4626合约，类似于"银行的随存随取理财"，俗称"去中心化的投资理财产品"，项目方会拿用户的投入资产做各种金融投资，收益通常不固定，可能会受到市场波动的影响，风险也相对较高。
+- 质押奖励合约，类似于"银行的定期存款"，项目方通常不会将用户质押的资产用于其他投资，它的目的是激励用户锁定资产，风险相对较低，但收益也通常较为稳定和有限。
 
 　
 
