--- a/courses/041 代理模式.md
+++ b/courses/041 代理模式.md
@@ -148,6 +148,7 @@ contract LogicV1 {
 - 使用到"fallback机制"，"delegatecall机制"。
 - 代理合约的职责：真实的存储合约数据，使用"delegatecall机制"，把调用指令转发的逻辑合约。
 - 逻辑合约的职责：虽然定义合约数据，但只是操控变量，变量的原始值隶属于代理合约。
+- 存储布局共享的工作机制：代理合约的存储空间和逻辑合约的存储空间是共享的，delegatecall的调用，将逻辑合约中的操作和存储定位到代理合约的存储布局上。
 - 为什么我这个测试代码使用一个.sol文件：因为最终调用到逻辑合约函数后，它内部发出了事件，如果是2个合约使用分开的.sol文件编写，remix的控制台logs将无法捕获"事件日志"。
 
 
