--- a/courses/042 合约中的存储槽.md
+++ b/courses/042 合约中的存储槽.md
@@ -184,3 +184,6 @@ contract Proxy_3 {
 - 高位存储槽：通过哈希计算生成的动态唯一值，通常配合使用constant修饰，来避免与槽位冲突。(网上的定义大多数不太统一，只能简单理解一下)
 - 低位槽冲突的理解：按顺序查看槽位编号，重叠即冲突。
 - 高位槽冲突的理解：哈希唯一值相同，即冲突。
+- 标准代理模式下，代理合约只定义"高位存储槽变量"，逻辑合约只定义"低位存储槽变量"。
+
+![](../images/proxyMode_0_Slot.png "")
