--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -1,5 +1,17 @@
 #### 基本理解：
-- 在了解"普通代理模式"与"存储槽"后，以下讲示例"可升级代理模式"
+- 充分理解"可升级代理模式"与"函数选择器冲突"后，可得出如下假设：
+- 1. "代理合约"显性定义的函数只有"升级函数"，仅此一个。
+- 2. "逻辑合约"会以默认方式，定义大量的逻辑函数。
+- 3. 所以，"代理合约"的"升级函数"的函数选择器，是有可能与"逻辑合约"的"某个逻辑函数(假如，```foo(address)```)"的函数选择器，巧合为一个值。
+- 4. 此时，当管理员向"代理合约"发起```foo(address)```调用(使用低级调用方式)时，会直接错误的调用到"代理合约的升级函数"，那么，结果就是，代理合约升级为了一个"黑洞合约"，后果完全不可设想。
+- 5. 这种"函数选择器一致"导致的严重后果，称之为"代理模式下的函数选择器冲突"。
+- 6. 解决这种冲突的方式有两个：透明代理 与 通用可升级代理。
+
+　
+
+#### 透明代理的思想：
+- 既然，只有"管理员才会发起冲突式的调用"，他的原意是"向逻辑合约调用函数"，但是"错误调用到了升级函数"。
+- 此时，直接"限制管理员，不让他调用逻辑合约的函数"，也就是管理员只能调用升级函数，就可以避免冲突。
 
 　
 
@@ -81,6 +93,8 @@ contract Proxy {
     }
 
     fallback() external payable {
+        // 管理员发起的调用，不得转发到逻辑合约
+        require(msg.sender != getAdmin());
         _delegate_02(getImplementation());
     }
 
@@ -207,8 +221,6 @@ contract LogicV2 is LogicV1 {
 　
 
 #### 解释：
-- 代理合约的变量定义上，只定义必要"逻辑合约地址"与"管理员地址"，其他的合约数据虽然有代理合约保存，但这些数据的定义完全交给逻辑合约。
-- 使用remix进行验证测试：
-- 1. 部署LogicV1，使用V1地址来部署Proxy，使用Proxy发起setValue之类的函数调用，来代表用户发起了数据变化的调用，使用Proxy来查看(低级调用)_value等值。
-- 2. 部署LogicV2，使用Proxy升级到V2，使用Proxy查看_value等值的数据，理应上一次V1的数据留存下来的，使用Proxy更改_value4，进而查看_value1,_value2,_value3等数据，理应都是完好的。
+- 代码改动很小，只需要"限制管理员，调用```fallback()```即可"。
+- 透明代理模式的缺点：每次用户调用到```fallback()```时，都需要判断"不许是管理员"，这会消耗更多的gas。
 
