--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -1,17 +1,6 @@
-#### 基本理解：
-- 充分理解"可升级代理模式"与"函数选择器冲突"后，可得出如下假设：
-- 1. "代理合约"显性定义的函数只有"升级函数"，仅此一个。
-- 2. "逻辑合约"会以默认方式，定义大量的逻辑函数。
-- 3. 所以，"代理合约"的"升级函数"的函数选择器，是有可能与"逻辑合约"的"某个逻辑函数(假如，```foo(address)```)"的函数选择器，巧合为一个值。
-- 4. 此时，当管理员向"代理合约"发起```foo(address)```调用(使用低级调用方式)时，会直接错误的调用到"代理合约的升级函数"，那么，结果就是，代理合约升级为了一个"黑洞合约"，后果完全不可设想。
-- 5. 这种"函数选择器一致"导致的严重后果，称之为"代理模式下的函数选择器冲突"。
-- 6. 解决这种冲突的方式有两个：透明代理(Transparent Proxy Standard) 与 通用可升级代理(Universal Upgradeable Proxy Standard)。
-
-　
-
-#### 透明代理的思想：
-- 既然，只有"管理员才会发起冲突式的调用"，他的原意是"向逻辑合约调用函数"，但是"错误调用到了升级函数"。
-- 此时，直接"限制管理员，不让他调用逻辑合约的函数"，也就是管理员只能调用升级函数，就可以避免冲突。
+#### 通用可升级代理模式的思想：
+- 既然，透明代理模式下，管理员的行为受限
+- 此时，让管理员行为不受限，但把"升级函数"放置在"逻辑合约"中，让"代理合约"不定义任何函数。
 
 　
 
@@ -24,78 +13,66 @@
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
-import "MyScripts/utils/StorageSlot.sol";
+library ERC1967Utils {
+    // `IMPLEMENTATION_SLOT` 与 `ADMIN_SLOT` 的统一定义，使用固定的 bytes32 值来定义SLOT，效率非常高，编译时就确定。
+    bytes32 internal constant IMPLEMENTATION_SLOT = 0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc;
+    bytes32 internal constant ADMIN_SLOT = 0xb53127684a568b3173ae13b9f8a6016e05a17d6f4eac516e43e4338fbc5fa93c;
+
+    function getImplementation() internal view returns (address) {
+        return getAddressSlot(IMPLEMENTATION_SLOT).value;
+    }
+
+    function setImplementation(address newImplementation) internal {
+        require(newImplementation != address(0), "New implementation is the zero address");
+        getAddressSlot(IMPLEMENTATION_SLOT).value = newImplementation;
+    }
+
+    function getAdmin() internal view returns (address) {
+        return getAddressSlot(ADMIN_SLOT).value;
+    }
+
+    function setAdmin(address newAdmin) internal {
+        require(newAdmin != address(0), "New admin is the zero address");
+        getAddressSlot(ADMIN_SLOT).value = newAdmin;
+    }
+
+    struct AddressSlot {
+        address value;
+    }
+
+    function getAddressSlot(bytes32 slot) internal pure returns (AddressSlot storage r) {
+        assembly {
+            r.slot := slot
+        }
+    }
+}
 
 contract Proxy {
-    // 代理合约中，使用高位存储槽(彻底与逻辑合约的变量定义，隔离开) 记录逻辑合约地址，以及管理员地址
-    bytes32 private constant IMPLEMENTATION_SLOT = bytes32(uint256(keccak256("eip1967.proxy.implementation")));
-    bytes32 private constant ADMIN_SLOT = bytes32(uint256(keccak256("eip1967.proxy.admin")));
+    // 代理合约中，使用高位存储槽(彻底与逻辑合约的变量定义，隔离开) 记录逻辑合约地址，以及管理员地址，但此处留空，留给 ERC1967Utils来定义。
 
     ////////////////////////////////////////////////////
 
     modifier onlyAdmin() {
-        require(msg.sender == getAdmin());
+        require(msg.sender == ERC1967Utils.getAdmin());
         _;
     }
 
     constructor(address logicContractAddress) {
-        setImplementation(logicContractAddress);
-        setAdmin(msg.sender);
+        ERC1967Utils.setImplementation(logicContractAddress);
+        ERC1967Utils.setAdmin(msg.sender);
     }
 
-    function setImplementation(address newImplementation) internal {
-        require(
-            newImplementation != address(0),
-            "New implementation is the zero address"
-        );
-
-        StorageSlot.getAddressSlot(IMPLEMENTATION_SLOT).value = newImplementation;
+    function testGetImplementation() public view returns (address) {
+        return ERC1967Utils.getImplementation();
     }
 
-    // function getImplementation() internal view returns (address) {
-    //     address impl;
-    //     bytes32 position = IMPLEMENTATION_SLOT;
-    //     assembly {
-    //         impl := sload(position)
-    //     }
-    //     return impl;
-    // }
-
-    function getImplementation() internal view returns (address) {
-        address impl = StorageSlot.getAddressSlot(IMPLEMENTATION_SLOT).value;
-        return impl;
+    function testGetAdmin() public view returns (address) {
+        return ERC1967Utils.getAdmin();
     }    
-
-    function setAdmin(address newAdmin) internal {
-        require(newAdmin != address(0), "new Admin is the zero address");
-
-        StorageSlot.getAddressSlot(ADMIN_SLOT).value = newAdmin;
-    }
-
-    // function getAdmin() internal view returns (address) {
-    //     address admin;
-    //     bytes32 position = ADMIN_SLOT;
-    //     assembly {
-    //         admin := sload(position)
-    //     }
-    //     return admin;
-    // }
-
-    function getAdmin() internal view returns (address) {
-        address admin = StorageSlot.getAddressSlot(ADMIN_SLOT).value;
-        return admin;
-    }    
-
-    function upgradeTo(address logicContractAddress) external onlyAdmin {
-        // 升级 逻辑合约
-        require(msg.sender == getAdmin());
-        setImplementation(logicContractAddress);
-    }
 
     fallback() external payable {
-        // 管理员发起的调用，不得转发到逻辑合约
-        require(msg.sender != getAdmin());
-        _delegate_02(getImplementation());
+        // 不再检查调用者，即不论是管理员还是用户，都可以调用。
+        _delegate_02(ERC1967Utils.getImplementation());
     }
 
     receive() external payable {}
@@ -152,6 +129,12 @@ contract LogicV1 {
     event OnSetValue1(uint256 value);
     event OnSetValue2(uint256 value);
     event OnSetValue3(uint256 value);
+
+    function upgradeTo(address newImplementation) external {
+        // 升级函数，直接定义在逻辑合约中!
+        require(msg.sender == ERC1967Utils.getAdmin(), "Caller is not admin");
+        ERC1967Utils.setImplementation(newImplementation);
+    }    
 
     //函数选择器，且参数为1，合并编码:  0x6ca0f3210000000000000000000000000000000000000000000000000000000000000001
     function setValue1(uint256 value) external returns (uint256) {
@@ -210,7 +193,6 @@ contract LogicV2 is LogicV1 {
     }      
 }
 
-
 ```
 
 　
@@ -221,6 +203,7 @@ contract LogicV2 is LogicV1 {
 　
 
 #### 解释：
-- 代码改动很小，只需要"限制管理员，调用```fallback()```即可"。
-- 透明代理模式的缺点：每次用户调用到```fallback()```时，都需要判断"不许是管理员"，这会消耗更多的gas。
+- 把"逻辑合约地址槽位、管理员地址槽位"的模块，提炼到```library ERC1967Utils```，这样"逻辑合约"就能轻松访问槽位数据。
+- 通用可升级代理模式的缺点：更复杂，因为逻辑合约承载了更多功能。
 
+![](../images/proxyMode_Compare.png "")
