--- a/courses/042 合约中的存储槽.md
+++ b/courses/042 合约中的存储槽.md
@@ -53,7 +53,7 @@ contract Proxy_0 {
 }
 
 contract Proxy_1 {
-    // 表面上定义低位存储槽的变量
+    // 表面上不定义低位存储槽的变量
 
     function getValueBySlot(uint256 slotIndex)
         external
