--- a/courses/050 重入攻击.md
+++ b/courses/050 重入攻击.md
@@ -2,7 +2,7 @@
 - "重入攻击"，顾名思义，重复执行逻辑而造成的攻击。
 - 广义上，重入指的是，合约A在调用合约B时，合约B又回调合约A的某个函数。
 - 即将讨论的示例，重入攻击，指的是"重复执行转账操作，而造成资金损失的攻击"。
-- 我理解的攻击机制：利用合约函数对于"单次函数的调用"，没有进行"开闭检查"，而达成的重复进入逻辑。
+- 我理解的攻击机制：利用合约函数对于"单次函数的调用"，没有进行"严格的开闭检查"，而达成的重复进入逻辑。
 
 
 　
