--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -223,4 +223,5 @@ contract LogicV2 is LogicV1 {
 #### 解释：
 - 代码改动很小，只需要"限制管理员，调用```fallback()```即可"。
 - 透明代理模式的缺点：每次用户调用到```fallback()```时，都需要判断"不许是管理员"，这会消耗更多的gas。
+- 适用：对安全性和权限控制要求高的复杂项目（如 DeFi、DAO），能够清晰分离用户和管理员的权限。
 
