--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -205,5 +205,6 @@ contract LogicV2 is LogicV1 {
 #### 解释：
 - 把"逻辑合约地址槽位、管理员地址槽位"的模块，提炼到```library ERC1967Utils```，这样"逻辑合约"就能轻松访问槽位数据。
 - 通用可升级代理模式的缺点：更复杂，因为逻辑合约承载了更多功能。
+- 适用：适合资源受限、对升级需求简单的项目，在降低成本的同时提供升级的灵活性。
 
 ![](../images/proxyMode_Compare.png "")
