--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -98,3 +98,11 @@
 - 滑点：当执行交易时实际价格与预期价格之间的差异。
 - 具体来说，当你在一个市场下单购买或出售资产时，理想情况下你会按照你所看到的价格成交。
 - 然而，在实际交易过程中，由于多种因素的影响，最终成交的价格可能会有所不同。这种差异就是滑点。
+
+　
+
+**EOA**
+- 全称 Externally Owned Account：外部拥有账户
+- 是由普通用户控制的账户。
+- 用户使用私钥对该账户进行控制和操作，因此通常被称为“外部账户”或“外部拥有账户”。
+- EOA 不包含智能合约代码，而是由一个公钥和私钥对来管理。每个 EOA 都有一个与之关联的地址，该地址是通过公钥生成的。
