--- a/courses/053 Gas优化技巧 - 副本.md
+++ b/courses/053 Gas优化技巧 - 副本.md
@@ -1,6 +1,19 @@
 #### 概念：
+- Gas是用来度量以太坊虚拟机（EVM）执行操作所需的计算资源的单位。
+- 每次执行一段代码（如交易、智能合约方法调用或状态更新），都会消耗一定数量的Gas。
+- Gas是通过以太坊的原生货币——以太币（ETH）来支付的。每个操作的Gas费用乘以相应的Gas价格（以Gwei为单位）就构成了实际的费用。
+- ```Gas费用 = Gas消耗量 × Gas价格```
+- Gas价格（通常以Gwei为单位，1 Gwei = 10^-9 ETH）是由交易发起者设置的，可以根据网络的拥堵情况调整。
+- Gas价格越高，交易被矿工（或验证者）处理的速度就越快。
+- Gas的消耗量是由EVM预定义的，开发者无法直接控制，但可以优化智能合约的代码以减少Gas的使用。
 - 在以太坊等区块链平台上，Gas费用直接影响用户体验和合约的执行成本。
-- 所以，开发者需要运用(起码是熟知)以下优化技巧。
+- Gas Limit：这是交易或合约调用时允许消耗的最大Gas量。如果执行过程中Gas消耗超过了这个上限，交易或操作将被撤销，且已消耗的Gas不会退还。
+- Gas Price：这是用户愿意为每单位Gas支付的ETH数量。Gas价格越高，交易越有可能被矿工优先处理。
+- Gas作用1：防止滥用：Gas机制防止了不必要的资源浪费或恶意攻击（例如无限循环）。如果智能合约中有
+- Gas作用2：激励机制：Gas费用作为矿工或验证者的奖励，激励他们处理交易和执行智能合约操作。
+- Gas波多因素1：网络拥堵：当以太坊网络繁忙时，Gas费用会上升，因为更多的人争夺相同的区块空间。反之，在网络不繁忙时，Gas费用较低。
+- Gas波多因素2：合约复杂度：复杂的智能合约操作需要更多Gas来执行，因此会提高费用。
+
 
 　
 
