--- a/courses/053 Gas介绍.md
+++ b/courses/053 Gas介绍.md
@@ -11,8 +11,8 @@
 - Gas Price：这是用户愿意为每单位Gas支付的ETH数量。Gas价格越高，交易越有可能被矿工优先处理。
 - Gas作用1：防止滥用：Gas机制防止了不必要的资源浪费或恶意攻击（例如无限循环）。如果智能合约中有
 - Gas作用2：激励机制：Gas费用作为矿工或验证者的奖励，激励他们处理交易和执行智能合约操作。
-- Gas波多因素1：网络拥堵：当以太坊网络繁忙时，Gas费用会上升，因为更多的人争夺相同的区块空间。反之，在网络不繁忙时，Gas费用较低。
-- Gas波多因素2：合约复杂度：复杂的智能合约操作需要更多Gas来执行，因此会提高费用。
+- Gas波动因素1：网络拥堵：当以太坊网络繁忙时，Gas费用会上升，因为更多的人争夺相同的区块空间。反之，在网络不繁忙时，Gas费用较低。
+- Gas波动因素2：合约复杂度：复杂的智能合约操作需要更多Gas来执行，因此会提高费用。
 
 　
 
