--- a/courses/053 Gas优化技巧_02.md
+++ b/courses/053 Gas优化技巧_02.md
@@ -6,7 +6,7 @@
 ```
 pragma solidity ^0.8.0;
 
-contract GasOptimization {
+contract GasExample {
     uint[] public data;
     
     // 优化前：函数做多次对 storage 数据的写入
@@ -39,7 +39,7 @@ contract GasOptimization {
 ```
 pragma solidity ^0.8.0;
 
-contract GasOptimization {
+contract GasExample {
 
     // 优化前：使用 memory 来存储输入参数
     function processData(uint[] memory inputData) public pure returns (uint) {
