--- a/courses/053 Gas优化技巧_03.md
+++ b/courses/053 Gas优化技巧_03.md
@@ -10,7 +10,7 @@
 ```
 pragma solidity ^0.8.0;
 
-contract GasOptimization {
+contract GasExample {
     uint[] public data;
 
     // 优化前：每次循环都计算数组长度，增加不必要的 gas 消耗
