--- a/courses/054 默克尔树.md
+++ b/courses/054 默克尔树.md
@@ -106,7 +106,7 @@ async function main() {
 
 - 以下是生成的默克尔树的json数据
 
-![](../images/MerkleTree_json.png "")
+![](../images/MerkleTree_Json.png "")
 
 　
 
