--- a/courses/054 默克尔树.md
+++ b/courses/054 默克尔树.md
@@ -110,7 +110,7 @@ async function main() {
 
 　
 
-- 以下是通过网页形式(https://lab.miguelmota.com/merkletreejs/example/)生成默克尔树
+- 以下是通过网页形式 https://lab.miguelmota.com/merkletreejs/example/ 生成默克尔树
 
 ![](../images/MerkleTree_Tool_1.png "")
 ![](../images/MerkleTree_Tool_2.png "")
