--- a/courses/055 自动化工具.md
+++ b/courses/055 自动化工具.md
@@ -109,4 +109,4 @@ contract TestAutomation_1 is AutomationCompatibleInterface {
     }
 }
 ```
-- 具体的建立Automation的步骤，就不展开了，切记需要把```Starting Balance```的Link设置为不小于1，才能成功触发自动化。
+- 具体的建立Automation的步骤，就不展开了，切记仍然需要把```Starting Balance```的Link设置为不小于1，才能成功触发自动化。
