--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -1,12 +1,15 @@
 
 #### 以太币的单位：
 ```
+Wei(最小的计量单位)
 Kwei(Babbage) = 10^3  Wei
 Mwei(Lovelace) = 10^6 Wei
 Gwei(Shannon) = 10^9 Wei
 Microether(Szabo) = 10^12 Wei
 Milliether(Finney) = 10^15 Wei
 Ether = 10^18 Wei
+
+记忆方式：看门狗(K - M - G)
 ```
 
 #### receive()函数：
