--- a/courses/056 无常损失.md
+++ b/courses/056 无常损失.md
@@ -17,7 +17,7 @@
 ```    
     -> 按照恒积自动做市商的规则，1个ETH与100个USDT，构成恒积: X · Y = K，即 1 · 100 = 100
     -> 1个ETH 的价值等价于 100个USDT
-    -> 此时，用户A移除流动性，则持有的价值为：1个ETH 和 100个USDT，全部换算为USDT，就等价于[ (1*100)100个USDT + 100个USDT ] = [ 200个USDT ]
+    -> 此时，用户A如果移除流动性，则持有的价值为：1个ETH 和 100个USDT，全部换算为USDT，就等价于[ (1*100)100个USDT + 100个USDT ] = [ 200个USDT ]
 ```
 - 时刻0：用户B，手持1个ETH与100个USDT，它全部换算为USDT，就等价于[ (1*100)100个USDT + 100个USDT ] = [ 200个USDT ]
 - 由此，可观察到，此时，提供原来流动性的用户A的持有价值只有[ 200个USDT ]，是完全等价于在场外的用户B的[ 200个USDT ]
@@ -28,7 +28,7 @@
 ```
     -> 按照恒积自动做市商的规则，0.8个ETH与125个USDT，构成恒积: X · Y = K，即 0.8 · 125 = 100
     -> 1个ETH 的价值等价于 125/0.8 = 156.25 USDT
-    -> 此时，用户A移除流动性，则持有的价值为：0.8个ETH 和 125个USDT，全部换算为USDT，就等价于[ (0.8*156.25)125个USDT + 125个USDT ] = [ 250个USDT ]
+    -> 此时，用户A如果移除流动性，则持有的价值为：0.8个ETH 和 125个USDT，全部换算为USDT，就等价于[ (0.8*156.25)125个USDT + 125个USDT ] = [ 250个USDT ]
 ```
 - 时刻1.1：用户B，仍然手持1个ETH与100个USDT，它全部换算为USDT，就等价于[ (1*156.25)156.25个USDT + 100个USDT ] = [ 256.25个USDT ]
 - 由此，可观察到，当ETH涨的时候，提供原来流动性的用户A的持有价值只有[ 250个USDT ]，是低于在场外的用户B的[ 256.25个USDT ]
@@ -39,7 +39,7 @@
 ```
     -> 按照恒积自动做市商的规则，1.25个ETH与80个USDT，构成恒积: X · Y = K，即 1.25 · 80 = 100
     -> 1个ETH 的价值等价于 80/1.25 = 64 USDT    
-    -> 此时，用户A移除流动性，则持有的价值为：1.25个ETH 和 80个USDT，全部换算为USDT，就等价于[ (1.25*64)80个USDT + 80个USDT ] = [ 160个USDT ]
+    -> 此时，用户A如果移除流动性，则持有的价值为：1.25个ETH 和 80个USDT，全部换算为USDT，就等价于[ (1.25*64)80个USDT + 80个USDT ] = [ 160个USDT ]
 ```
 - 时刻1.1：用户B，仍然手持1个ETH与100个USDT，它全部换算为USDT，就等价于[ (1*64)64个USDT + 100个USDT ] = [ 164个USDT ]
 - 由此，可观察到，当ETH跌的时候，提供原来流动性的用户A的持有价值只有[ 160个USDT ]，是低于在场外的用户B的[ 164个USDT ]
