--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -72,6 +72,12 @@
 
 　
 
+**DAO**
+- 全称 Decentralized Autonomous Organization：去中心化自治组织
+- 是一种通过智能合约实现的新型组织形式，它没有传统的中心化管理结构。
+
+　
+
 **AMM**
 - 全称 Automated Market Maker：做市商
 - 是一种无需传统中介的交易机制。通过算法，用户可以在去中心化交易所（DEX）上进行代币交换，而不依赖订单簿或中介。
