swap操作的手续费计算，修正

--- a/courses/037 自动做市商_恒定乘积.md
+++ b/courses/037 自动做市商_恒定乘积.md
@@ -110,7 +110,7 @@ contract CPAMM {
         tokenIn.transferFrom(msg.sender, address(this), _amountIn);
 
         // fee 千分之三的手续费
-        amountOut = _amountIn * reserveOut * 997 / (reserveIn + _amountIn) * 1000
+        amountOut = _amountIn * reserveOut * 997 / (reserveIn * 1000 + _amountIn * 997)
 
         // 把计算出的Out，转账给用户
         tokenOut.transfer(msg.sender, amountOut);
