--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -24,9 +24,13 @@
 - △y·(x+△x) = △x·y
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
-- 加入手续费
-- $△y = \frac{(△x · y)·(1 - 0.003)}{(x + △x)}$
 -
-- $△y = \frac{(△x · y)·(0.997)}{(x + △x)}$
+- 这里产生0.3%手续费，意思是，$△x$会缩减为$△x$ · 99.7%
 -
-- $△y = \frac{(△x · y)·997}{(x + △x)·1000}$
+- $△y = \frac{△x · (1 - 0.003) · y}{x + △x·(1 - 0.003)}$
+-
+- $△y = \frac{△x · (\frac{997}{1000}) · y}{x + △x·(\frac{997}{1000})}$
+-
+- $△y = \frac{△x · y · (\frac{997}{1000})}{x·(\frac{1000}{1000})  + △x·(\frac{997}{1000})}$
+-
+- $△y = \frac{△x · y · 997}{x · 1000 + △x · 997}$
