--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -19,13 +19,13 @@
 -
 - $0 = 0 - x·△y + △x·y - △x·△y$
 -
-- x·△y + △x·△y = △x·y
+- $x·△y + △x·△y = △x·y$
 -
-- △y·(x+△x) = △x·y
+- $△y·(x+△x) = △x·y$
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
 -
-- 这里产生0.3%手续费，意思是，$△x$会缩减为△x · 99.7%
+- 这里产生0.3%手续费，意思是，$△x$会缩减为$△x$ · 99.7%
 -
 - $△y = \frac{△x · (1 - 0.003) · y}{x + △x·(1 - 0.003)}$
 -
