--- a/courses/019 ERC20代币.md
+++ b/courses/019 ERC20代币.md
@@ -55,6 +55,39 @@
 - https://learnblockchain.cn/article/506
 - 所以，一般会引入：```@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol```
 
+
+#### 延伸一下，代币卡在合约中的现象，以及解决机制：
+- 默认的转账函数：
+```
+// 如果接收地址是合约地址，但该合约没有实现ERC20兼容接口，可能导致代币“卡”在合约中。
+// 也就是，过程中不发生回滚，导致代币直接转进去了。
+function transfer(address recipient, uint256 amount) public returns (bool);
+```
+
+- 安全的转账函数：
+```
+// 如果转账失败，无论是显式失败（抛出异常）还是隐式失败（返回 false），safeTransfer 都会捕获并处理，避免错误被忽视。
+function safeTransfer(
+    IERC20 token,
+    address to,
+    uint256 value
+) internal {
+    bool success = _callOptionalReturn(
+        token,
+        abi.encodeWithSelector(token.transfer.selector, to, value)
+    );
+    require(success, "SafeERC20: Transfer failed");
+}
+
+function _callOptionalReturn(IERC20 token, bytes memory data) private returns (bool) {
+    (bool success, bytes memory returndata) = address(token).call(data);
+    if (returndata.length > 0) { // 返回数据不为空
+        require(abi.decode(returndata, (bool)), "SafeERC20: Operation did not succeed");
+    }
+    return success;
+}
+
+```
 ---------------------------------------------------------------------------------------------
 
 ##### 手写练习源码：
