--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -145,6 +145,14 @@ function <function name>(<parameter types>) {internal|external|public|private} [
 
 #### 函数可见性：
 - public：内部和外部均可见。
+- 当一个状态变量被声明为public时，编译器会自动生成一个同名的getter函数。
+```
+// 声明一个mapping
+mapping(address => mapping(address => address)) public getPair;
+
+// 等价于同名的getter函数，如下:
+function getPair(address tokenA, address tokenB) external view returns (address pair);
+```
 - private：只能从本合约内部访问，继承的合约也不能使用。
 - external：只能从合约外部访问（但内部可以通过 ```this.f()``` 来调用，f是函数名，但这种调用方式消耗gas较多，不推荐）。
 - internal: 只能从合约内部访问，继承的合约可以用。
