--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -59,6 +59,24 @@
 
 
 
+```
+    针对msg.sender 举例子；
+    假设你的场景是这样的：
+
+    外部账户（如用户） 调用了 合约A 的 fooA 方法。
+    在 fooA 方法内部，调用了 合约B 的 fooB 方法。
+    在 fooB 方法内部，调用了 合约C 的 fooC 方法。
+    且 fooA/fooB/fooC 内部，都是使用了msg.sender。
+
+    对于上述情况，各个函数中的 msg.sender 值如下：
+
+    fooA 中的 msg.sender：这是最初发起调用的外部账户（用户的地址）。
+    fooB 中的 msg.sender：这是调用 fooB 的合约地址，即 合约A 的地址。
+    fooC 中的 msg.sender：这是调用 fooC 的合约地址，即 合约B 的地址。
+```
+
+
+
 
 #### tx：提供有关当前交易的信息。tx是transaction的缩写。
     tx.origin
